--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
         "server": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1",
         "client": "npm run start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\" \"npm run webhook\"",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
         "webhook": "./sendgrid_webhook.sh",
-        "heroku-postbuild": "npm run build"
+        "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "author": "",
     "license": "ISC",
