--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "client": "npm run start --prefix client",
         "webhook": "./sendgrid_webhook.sh",
+        "db:init": "dropdb --if-exists invitation_db && createdb invitation_db",
+        "db:model": "node ./models/index",
         "heroku-postbuild": "cd client && npm install && npm run build"
     },
     "author": "",
