--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "webhook": "./sendgrid_webhook.sh",
         "db:init": "dropdb --if-exists invitation_db && createdb invitation_db",
         "db:model": "node ./models/index",
-        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build  --prefix client"
+        "heroku-postbuild": "npm run build"
     },
     "author": "",
     "license": "ISC",
